<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <ImageButton
            android:id="@+id/btnLogout"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="end"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_exit_to_app_black_24dp" />

    </Toolbar>


    <TextView
        android:id="@+id/tvwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/alegreya_sans_bold"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/cantora_one"
        android:text="@string/ourproducts"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="220dp">

    </android.support.v4.view.ViewPager>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/cantora_one"
        android:text="@string/aboutus"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="13dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/aboutImgView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/about_us" />

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/copyright"
            android:textAlignment="center" />

    </RelativeLayout>

</LinearLayout>