<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <Toolbar
        android:id="@+id/aboutToolbar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/colorPrimary"
        android:contentInsetStart="0dp">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <ImageButton
            android:id="@+id/btnAboutBack"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="start"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <ImageButton
            android:id="@+id/btnAboutLogout"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="end"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_exit_to_app_black_24dp" />

    </Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/cantora_one"
                android:text="@string/aboutus"
                android:textSize="25sp"
                android:textColor="@color/colorPrimary"/>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo" />

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/tvAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/alegreya_sans_medium_italic"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/feedback"
                android:textSize="25sp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/cantora_one"/>

            <EditText
                android:id="@+id/etFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <Button
                android:layout_margin="20dp"
                android:id="@+id/btnFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_feedback"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textAllCaps="false"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>